# verbose-octo

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
notebooks/: coco_dataset_analysis.ipynb
scripts/: augment_dataset.py  clean_dataset.py  download_coco.py
src/: api.py  main.py
tests/: test_main.py
