[project]
name = "verbose-octo"
version = "0.1.0"
description = "A project to work with the YOLOv8 model."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets",
    "tqdm",
    "requests",
    "fastapi",
    "ultralytics",
    "ruff",
    "uvicorn",
    "python-multipart",
    "albumentations",
    "matplotlib",
    "opencv-python",
    "Pillow",
    "ImageHash",
]

[project.optional-dependencies]
test = [
    "pytest",
    "requests",
    "httpx",
]
dev = [
    "ipykernel",
]

[tool.ruff]
line-length = 88
